--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="./arguments.js"></script>
+    <!-- <script src="./arguments.js"></script> -->
+    <script src="./inheritance.js"></script>
   </head>
   <body>
 
